# noisemonitor

./: .gitignore  .gitmodules  CMakeLists.txt  LOG_UPLOAD_PRE_PSRAM.md  NOISE_MONITOR_SPEC.md  PSRAM_MIGRATION.md  README.md  partitions.csv  sdkconfig.defaults
components/nanopb/: CMakeLists.txt  logmessage.pb  logmessage.pb.c  noise.options  noise.pb  noise.pb.c  noise.pb.h  product.pb.c
main/: CMakeLists.txt  audio_dsp.c  audio_dsp.h  ble_publisher.c  ble_publisher.h  cal_console.c  cal_console.h  calibration.c  calibration.h  constants.c  constants.h  event_group.h  heap_diag.c  heap_diag.h  http_auth_headers.c  idf_component.yml  log_uploader.c  log_uploader.h  main.c  mqtt_publisher.c  mqtt_publisher.h  network_request.h  power_management.c  power_management.h  record_writer.c  record_writer.h  status_led.c  status_led.h  time_sync.c  wifi_connect.c  wifi_connect.h
proto/: logmessage.options  logmessage.pb.h  logmessage.proto  noise.options  noise.pb  noise.pb.c  noise.pb.h  noise.proto  product.pb.h
scripts/: efuse_write.sh  flash_nvs_data.sh  proto.sh
